# bunnie-example

./: .gitignore  .prettierrc  AGENTS.md  Cargo.toml  bunnie-serve.ts  bunnie-test.sh  global.css  justfile  package.json  tsconfig.json
components/: alert-dialog.jsx  badge.jsx  button.jsx  card.jsx  combobox.jsx  dropdown-menu.jsx  field.jsx  homepage.jsx  input-group.jsx  input.jsx  label.jsx  layout.jsx  select.jsx  separator.jsx  textarea.jsx  todo-form.jsx  todo-item.jsx  todo-list.jsx  todo-page.jsx
public/: global.css
src/: errors.rs  main.rs
