[package]
name = "bunnie-example"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
bunnie = { version = "1.0.0", path = "../bunnie/rust" }
color-eyre = "0.6.5"
dotenv = "0.15.0"
eyre = "0.6.12"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
